added all footer details

--- a/certificates.html
+++ b/certificates.html
@@ -100,13 +100,13 @@
     <div class="wrapper text-center mb-5 pt-1 pb-4">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h2 class="mt-5 text-center">Honors</h2>
 
             <div class="d-flex justify-content-center">
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/1-honors/01.jpg"
                   alt="Card image cap"
                 />
@@ -126,7 +126,7 @@
 
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/1-honors/02.jpg"
                   alt="Card image cap"
                 />
@@ -146,14 +146,14 @@
             </div>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h2 class="mt-5 text-center">
               Workexperiences & Academic activities
             </h2>
             <div class="d-flex justify-content-center">
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/2-workexperience & academic activity/01.jpg"
                   alt="Card image cap"
                 />
@@ -172,7 +172,7 @@
 
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/2-workexperience & academic activity/02.jpg"
                   alt="Card image cap"
                 />
@@ -196,13 +196,13 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h2 class="mt-5 text-center">Exhibitions</h2>
 
             <div class="d-flex justify-content-center">
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/3-exhibitions/01.jpg"
                   alt="Card image cap"
                 />
@@ -222,7 +222,7 @@
 
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/3-exhibitions/02.jpg"
                   alt="Card image cap"
                 />
@@ -242,12 +242,12 @@
             </div>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h2 class="mt-5 text-center">Courses</h2>
             <div class="d-flex justify-content-center">
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/4-courses/01.jpg"
                   alt="Card image cap"
                 />
@@ -267,7 +267,7 @@
 
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/4-courses/02.jpg"
                   alt="Card image cap"
                 />
@@ -291,13 +291,13 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h2 class="mt-5 text-center">Workshops</h2>
 
             <div class="d-flex justify-content-center">
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/5-workshops/01.jpg"
                   alt="Card image cap"
                 />
@@ -316,7 +316,7 @@
 
               <div class="card m-3" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/5-workshops/02.jpg"
                   alt="Card image cap"
                 />
@@ -336,13 +336,13 @@
             </div>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <h2 class="mt-5 text-center">Sports</h2>
             <div class="row">
               <div class="col-md-4">
                 <div class="card m-1" style="width: 12rem">
                   <img
-                    class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                    class="card-img-top shadow-sm p-1 d-none d-md-block"
                     src="images/certificates/6-sports/01.jpg"
                     alt="Card image cap"
                   />
@@ -362,7 +362,7 @@
               <div class="col-md-4">
                 <div class="card m-1" style="width: 12rem">
                   <img
-                    class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                    class="card-img-top shadow-sm p-1 d-none d-md-block"
                     src="images/certificates/6-sports/02.jpg"
                     alt="Card image cap"
                   />
@@ -382,7 +382,7 @@
               <div class="col-md-4">
                 <div class="card m-1" style="width: 12rem">
                   <img
-                    class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                    class="card-img-top shadow-sm p-1 d-none d-md-block"
                     src="images/certificates/6-sports/03.jpg"
                     alt="Card image cap"
                   />
@@ -410,10 +410,10 @@
           <div class="row">
             <div class="col-md-2"></div>
 
-            <div class="col-md-3">
-              <div class="card m-3" style="width: 12rem">
+            <div class="col-md-3 m-2">
+              <div class="card m-1" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/7-others or (participations)/01.jpg"
                   alt="Card image cap"
                 />
@@ -430,10 +430,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card m-3" style="width: 12rem">
+            <div class="col-md-3 m-2">
+              <div class="card m-1" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/7-others or (participations)/02.jpg"
                   alt="Card image cap"
                 />
@@ -452,10 +452,10 @@
               </div>
             </div>
 
-            <div class="col-md-3">
-              <div class="card m-3" style="width: 12rem">
+            <div class="col-md-3 m-2">
+              <div class="card m-1" style="width: 12rem">
                 <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  class="card-img-top shadow-sm p-1 d-none d-md-block"
                   src="images/certificates/6-sports/03.jpg"
                   alt="Card image cap"
                 />
@@ -479,66 +479,70 @@
     </div>
     <footer id="contact-me">
       <div class="container">
-        <div class="text-muted mt-5 d-flex justify-content-between">
-          <div class="d-flex justify-content-center ms-5">
-            <div>
-              <img
-                src="/images/profile-pic.png"
-                alt=""
-                class="img-fluid d-inline p-2 m-0"
-                width="80px"
-              />
-            </div>
-            <div>
-              <p class="contact-me mt-3 me-5 pe-5">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="d-flex justify-content-center">
+              <div>
+                <img
+                  src="/images/profile-pic.png"
+                  alt=""
+                  class="img-fluid d-inline p-2 m-0"
+                  width="80px"
+                />
+              </div>
+              <div class="contact-me mt-3 text-muted">
                 Ahmad Farkhondeh <br />Industrial Designer
-              </p>
+              </div>
             </div>
           </div>
-
-          <div class="contact-me">
-            <i
-              class="fa fa-envelope email-icon pe-2 pb-2 pt-3"
-              aria-hidden="true"
-            ></i
-            >ahmadfarkhondeh1997@gmail.com
-
-            <br />
-            <i class="fa fa-phone" aria-hidden="true"></i>
-            +989368125532
+          <div class="col-lg-4"></div>
+          <div class="col-lg-4 text-start">
+            <div class="contact-me">
+              <i
+                class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
+                aria-hidden="true"
+              ></i>
+              <span class="contact-me-content"
+                >ahmadfarkhondeh1997@gmail.com</span
+              >
+              <br />
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span class="contact-me-content"> +989368125532</span>
+            </div>
           </div>
         </div>
-        <div class="social-links d-flex justify-content-center">
-          <div>
-            <a
-              href="https://www.linkedin.com/in/ahmad-farkhondeh/"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
-              target="_blank"
-            >
-              <i class="fa-brands fa-researchgate m-2"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://orcid.org/0009-0007-1695-1563
-"
-              target="_blank"
-            >
-              <i class="fa-brands fa-orcid m-2"></i
-            ></a>
-          </div>
-        </div>
-
-        <p class="contact-me text-center text-muted mb-5">
-          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
-        </p>
       </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <div>
+          <a
+            href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+            target="_blank"
+          >
+            <i class="fa-brands fa-researchgate m-2"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://orcid.org/0009-0007-1695-1563
+"
+            target="_blank"
+          >
+            <i class="fa-brands fa-orcid m-2"></i
+          ></a>
+        </div>
+      </div>
+
+      <p class="contact-me text-center text-muted mb-5">
+        © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+      </p>
     </footer>
   </body>
 </html>
