--- a/gallery.html
+++ b/gallery.html
@@ -100,13 +100,13 @@
     <div class="wrapper text-center mb-5 pt-4 pb-4">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/1.My work (Aysu) was exhibited in the Design in Support of human wellbeing with regard to isolation and reduced social interactions exhibition at Isfahan city, Iran.jpg"
                   alt="Card image cap"
                 />
@@ -126,7 +126,7 @@
                 href="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/2.Multi-diciplinary teamwork experience.jpg"
                   alt="Card image cap"
                 />
@@ -146,7 +146,7 @@
                 href="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/3.My work (Balancer) was exhibited in the Polish embassy in Iran.jpg"
                   alt="Card image cap"
                 />
@@ -165,7 +165,7 @@
                 href="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/4.“Trails of Hope. The Odyssey of Freedom” exhibition in Iran.jpg"
                   alt="Card image cap"
                 />
@@ -184,7 +184,7 @@
             <div class="card m-3" style="width: 16rem">
               <a href="images/gallery/5.Library.jpg">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/5.Library.jpg"
                   alt="Card image cap"
                 />
@@ -203,7 +203,7 @@
                 href="images/gallery/6.The graduation ceremony for Bachelor's degree, Art University of Isfahan, Isfahan, Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/6.The graduation ceremony for Bachelor's degree, Art University of Isfahan, Isfahan, Iran.jpg"
                   alt="Card image cap"
                 />
@@ -222,7 +222,7 @@
             <div class="card m-3" style="width: 16rem">
               <a href="images/gallery/7.co-working office.jpg">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/7.co-working office.jpg"
                   alt="Card image cap"
                 />
@@ -239,7 +239,7 @@
                 href="images/gallery/8.Ranked second in the fashion design competition, Isfahan, Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/8.Ranked second in the fashion design competition, Isfahan, Iran.jpg"
                   alt="Card image cap"
                 />
@@ -255,11 +255,11 @@
         </div>
 
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="images/gallery/9.Sustainability Jam workshop.JPG">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/9.Sustainability Jam workshop.JPG"
                   alt="Card image cap"
                 />
@@ -270,13 +270,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="images/gallery/10.Weekly meeting of sports association in Isfahan Art University, Isfahan, Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/10.Weekly meeting of sports association in Isfahan Art University, Isfahan, Iran.jpg"
                   alt="Card image cap"
                 />
@@ -291,11 +291,11 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="/images/gallery/11.Digital painting workshop.jpg">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/11.Digital painting workshop.jpg"
                   alt="Card image cap"
                 />
@@ -307,13 +307,13 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="/images/gallery/13.Isfahan Art University Sports Association camp, Isfahan, Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/13.Isfahan Art University Sports Association camp, Isfahan, Iran.jpg"
                   alt="Card image cap"
                 />
@@ -329,11 +329,11 @@
         </div>
 
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="images/gallery/12.Do Smart Workshop 2022.jpg">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/12.Do Smart Workshop 2022.jpg"
                   alt="Card image cap"
                 />
@@ -345,11 +345,11 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="/images/gallery/17.Sculpture workshop.jpg">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/17.Sculpture workshop.jpg"
                   alt="Card image cap"
                 />
@@ -360,13 +360,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="/images/gallery/15.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2017.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/15.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2017.jpg"
                   alt="Card image cap"
                 />
@@ -380,13 +380,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="images/gallery/16.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2016.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/16.Ranked first in the ping pong tournament at Art University of Isfahan, Isfahan, Iran 2016.jpg"
                   alt="Card image cap"
                 />
@@ -403,11 +403,11 @@
         </div>
 
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="/images/gallery/14.Metalworking.jpg">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/14.Metalworking.jpg"
                   alt="Card image cap"
                 />
@@ -419,13 +419,13 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="/images/gallery/18.Working with polyester resin and types of putty.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/18.Working with polyester resin and types of putty.jpg"
                   alt="Card image cap"
                 />
@@ -439,11 +439,11 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="/images/gallery/19.Woodworking workshop.jpg ">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/19.Woodworking workshop.jpg "
                   alt="Card image cap"
                 />
@@ -454,11 +454,11 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="images/gallery/20.Playing Billiard.jpg">
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="images/gallery/20.Playing Billiard.jpg"
                   alt="Card image cap"
                 />
@@ -472,13 +472,13 @@
         </div>
 
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="/images/gallery/23.2rd professional meeting and national competition, the role of industrial design in handicrafts.jpg "
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/23.2rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
                   alt="Card image cap"
                 />
@@ -492,13 +492,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="/images/gallery/22.3rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/22.3rd professional meeting and national competition, the role of industrial design in handicrafts.jpg"
                   alt="Card image cap"
                 />
@@ -513,13 +513,13 @@
             </div>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a
                 href="/images/gallery/21.My trip with my friends to the south coast of Iran.jpg"
               >
                 <img
-                  class="card-img-top shadow-sm p-1"
+                  class="card-img-top shadow-sm p-1 img-fluid"
                   src="/images/gallery/21.My trip with my friends to the south coast of Iran.jpg"
                   alt="Card image cap"
                 />
@@ -532,7 +532,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3">
             <div class="card m-3" style="width: 16rem">
               <a href="images/gallery/">
                 <img
@@ -552,66 +552,70 @@
     </div>
     <footer id="contact-me">
       <div class="container">
-        <div class="text-muted mt-5 d-flex justify-content-between">
-          <div class="d-flex justify-content-center ms-5">
-            <div>
-              <img
-                src="/images/profile-pic.png"
-                alt=""
-                class="img-fluid d-inline p-2 m-0"
-                width="80px"
-              />
-            </div>
-            <div>
-              <p class="contact-me mt-3 me-5 pe-5">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="d-flex justify-content-center">
+              <div>
+                <img
+                  src="/images/profile-pic.png"
+                  alt=""
+                  class="img-fluid d-inline p-2 m-0"
+                  width="80px"
+                />
+              </div>
+              <div class="contact-me mt-3 text-muted">
                 Ahmad Farkhondeh <br />Industrial Designer
-              </p>
+              </div>
             </div>
           </div>
-
-          <div class="contact-me">
-            <i
-              class="fa fa-envelope email-icon pe-2 pb-2 pt-3"
-              aria-hidden="true"
-            ></i
-            >ahmadfarkhondeh1997@gmail.com
-
-            <br />
-            <i class="fa fa-phone" aria-hidden="true"></i>
-            +989368125532
+          <div class="col-lg-4"></div>
+          <div class="col-lg-4 text-start">
+            <div class="contact-me">
+              <i
+                class="fa fa-envelope email-icon pe-1 pb-2 pt-3"
+                aria-hidden="true"
+              ></i>
+              <span class="contact-me-content"
+                >ahmadfarkhondeh1997@gmail.com</span
+              >
+              <br />
+              <i class="fa fa-phone" aria-hidden="true"></i>
+              <span class="contact-me-content"> +989368125532</span>
+            </div>
           </div>
         </div>
-        <div class="social-links d-flex justify-content-center">
-          <div>
-            <a
-              href="https://www.linkedin.com/in/ahmad-farkhondeh/"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
-              target="_blank"
-            >
-              <i class="fa-brands fa-researchgate m-2"></i
-            ></a>
-          </div>
-          <div>
-            <a
-              href="https://orcid.org/0009-0007-1695-1563
-"
-              target="_blank"
-            >
-              <i class="fa-brands fa-orcid m-2"></i
-            ></a>
-          </div>
-        </div>
-
-        <p class="contact-me text-center text-muted mb-5">
-          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
-        </p>
       </div>
+
+      <div class="social-links d-flex justify-content-center">
+        <div>
+          <a
+            href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+            target="_blank"
+          >
+            <i class="fa-brands fa-researchgate m-2"></i
+          ></a>
+        </div>
+        <div>
+          <a
+            href="https://orcid.org/0009-0007-1695-1563
+"
+            target="_blank"
+          >
+            <i class="fa-brands fa-orcid m-2"></i
+          ></a>
+        </div>
+      </div>
+
+      <p class="contact-me text-center text-muted mb-5">
+        © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+      </p>
     </footer>
   </body>
 </html>
