--- a/projects.html
+++ b/projects.html
@@ -228,7 +228,7 @@
           </button>
         </div>
       </div>
-      <h2 class="mt-5 mb-3">Environmental Design</h2>
+      <h2 class="mb-3">Environmental Design</h2>
       <p class="project-description mb-4">
         In the environmental design project, I focused on designing a vase made
         with natural materials such as animal silk, and pistachio and almond
@@ -252,7 +252,7 @@
         />
       </div>
 
-      <h2 class="mt-5 mb-3">Contact with Industry Project</h2>
+      <h2 class="mb-3 mt-3">Contact with Industry Project</h2>
       <p class="project-description mb-4">
         I worked on the problems of elderly patients in the Contact with
         Industry project. After publishing the online questionnaire, the
@@ -283,7 +283,7 @@
         />
       </div>
 
-      <h2 class="mt-5 mb-3">Packaging</h2>
+      <h2 class="mb-3 mt-3">Packaging</h2>
       <p class="project-description mb-4">
         One of the largest waste-producing industries is the packaging industry.
         The neglect of these industries regarding the sustainability approach
@@ -413,7 +413,7 @@
         </div>
       </div>
 
-      <h2 class="mb-3">Dialux Project</h2>
+      <h2 class="mb-3 mt-3">Dialux Project</h2>
       <p class="project-description mb-4">
         In the final project of Physics III (Electricity & Light), I designed
         suitable home lighting for both party and work modes using Dialux
