added go to btns

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,30 @@
         </div>
       </nav>
     </div>
-    <div class="text-center pt-2">
+    <div class="container text-center pt-2">  
+       <div class="container text-start">
+        <div class="bnm-project btn go-to-btn shadow">
+          <a href="portfolio.html#bnm-project" class="go-to-link"
+            >Go To BNM Project</a
+          >
+        </div>
+        <div class="alfred-project btn go-to-btn shadow">
+          <a href="portfolio.html#alfred-project" class="go-to-link"
+            >Go To Alfred Project</a
+          >
+        </div>
+        <div class="solin-project btn go-to-btn shadow">
+          <a href="portfolio.html#solin-project" class="go-to-link"
+            >Go To Solin Project</a
+          >
+        </div>
+        <div class="aysu-project btn go-to-btn shadow">
+          <a href="portfolio.html#aysu-project" class="go-to-link"
+            >Go To Neo-Aysu Project</a
+          >
+        </div>
+      </div>
+
       <img
         src="images/portfolio/01.jpg"
         width="80%"
@@ -112,17 +135,21 @@
         alt="02"
         class="img-fluid mb-2"
       />
+
       <img
         src="images/portfolio/03.jpg"
         width="80%"
         alt="03"
         class="img-fluid mb-2"
       />
+   
+
       <img
         src="images/portfolio/04.jpg"
         width="80%"
         alt="04"
         class="img-fluid mb-2"
+        id="bnm-project"
       />
       <img
         src="images/portfolio/05.jpg"
@@ -176,6 +203,7 @@
         width="80%"
         alt=""
         class="img-fluid mb-2"
+        id="alfred-project"
       />
       <img
         src="images/portfolio/13.jpg"
@@ -241,6 +269,7 @@
         width="80%"
         alt=""
         class="img-fluid mb-2"
+        id="solin-project"
       />
       <img
         src="images/portfolio/23.jpg"
@@ -265,6 +294,7 @@
         width="80%"
         alt=""
         class="img-fluid mb-2"
+        id="aysu-project"
       />
       <img
         src="images/portfolio/27.jpg"
