added all go to buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,27 +99,32 @@
         </div>
       </nav>
     </div>
-    <div class="container text-center pt-2">  
-       <div class="container text-start">
-        <div class="bnm-project btn go-to-btn shadow">
-          <a href="portfolio.html#bnm-project" class="go-to-link"
-            >Go To BNM Project</a
-          >
+    <div class="container text-center pt-2">
+      <div class="container text-start">
+        <div>
+          <button>
+            <a href="portfolio.html#bnm-project" class="go-to-bnm-link shadow"
+              >Go To BNM Project</a
+            >
+          </button>
         </div>
-        <div class="alfred-project btn go-to-btn shadow">
-          <a href="portfolio.html#alfred-project" class="go-to-link"
+        <div>
+           <button>
+          <a href="portfolio.html#alfred-project" class="go-to-alfred-link shadow"
             >Go To Alfred Project</a
           >
+          </button>
         </div>
-        <div class="solin-project btn go-to-btn shadow">
-          <a href="portfolio.html#solin-project" class="go-to-link"
+
+        <div>
+         <button> <a href="portfolio.html#solin-project" class="go-to-solin-link shadow"
             >Go To Solin Project</a
-          >
+          ></button>
         </div>
-        <div class="aysu-project btn go-to-btn shadow">
-          <a href="portfolio.html#aysu-project" class="go-to-link"
+        <div>
+         <button> <a href="portfolio.html#aysu-project" class="go-to-aysu-link shadow"
             >Go To Neo-Aysu Project</a
-          >
+          ></button>
         </div>
       </div>
 
@@ -142,7 +147,6 @@
         alt="03"
         class="img-fluid mb-2"
       />
-   
 
       <img
         src="images/portfolio/04.jpg"
