--- a/portfolio.html
+++ b/portfolio.html
@@ -102,29 +102,27 @@
     <div class="container text-center pt-2">
       <div class="container text-start">
         <div>
-          <button>
-            <a href="portfolio.html#bnm-project" class="go-to-bnm-link shadow"
-              >Go To BNM Project</a
-            >
-          </button>
+          <a href="portfolio.html#bnm-project" class=" btn go-to-bnm-link shadow"
+            >Go To BNM Project</a
+          >
         </div>
         <div>
-           <button>
-          <a href="portfolio.html#alfred-project" class="go-to-alfred-link shadow"
+          <a
+            href="portfolio.html#alfred-project"
+            class="btn go-to-alfred-link shadow"
             >Go To Alfred Project</a
           >
-          </button>
         </div>
 
         <div>
-         <button> <a href="portfolio.html#solin-project" class="go-to-solin-link shadow"
+          <a href="portfolio.html#solin-project" class="btn go-to-solin-link shadow"
             >Go To Solin Project</a
-          ></button>
+          >
         </div>
         <div>
-         <button> <a href="portfolio.html#aysu-project" class="go-to-aysu-link shadow"
+          <a href="portfolio.html#aysu-project" class=" btn go-to-aysu-link shadow"
             >Go To Neo-Aysu Project</a
-          ></button>
+          >
         </div>
       </div>
 
