--- a/portfolio.html
+++ b/portfolio.html
@@ -99,36 +99,39 @@
         </div>
       </nav>
     </div>
-    <div class="container text-start">
-      <div class="text-start">
-        <a
-          href="portfolio.html#bnm-project"
-          class="btn go-to-bnm-link shadow text-start"
-          >Go To BNM Project</a
-        >
-      </div>
-      <div>
-        <a
-          href="portfolio.html#alfred-project"
-          class="btn go-to-alfred-link shadow"
-          >Go To Alfred Project</a
-        >
-      </div>
 
-      <div>
-        <a
-          href="portfolio.html#solin-project"
-          class="btn go-to-solin-link shadow"
-          >Go To Solin Project</a
-        >
-      </div>
-      <div>
-        <a href="portfolio.html#aysu-project" class="btn go-to-aysu-link shadow"
-          >Go To Neo-Aysu Project</a
-        >
-      </div>
-    </div>
     <div class="container text-center pt-2">
+      <div class="container">
+        <div>
+          <a
+            href="portfolio.html#bnm-project"
+            class="btn go-to-bnm-link shadow d-none d-lg-block"
+            >Go To BNM Project</a
+          >
+        </div>
+        <div>
+          <a
+            href="portfolio.html#alfred-project"
+            class="btn go-to-alfred-link shadow d-none d-lg-block"
+            >Go To Alfred Project</a
+          >
+        </div>
+
+        <div>
+          <a
+            href="portfolio.html#solin-project"
+            class="btn go-to-solin-link shadow d-none d-lg-block"
+            >Go To Solin Project</a
+          >
+        </div>
+        <div>
+          <a
+            href="portfolio.html#aysu-project"
+            class="btn go-to-aysu-link shadow d-none d-lg-block"
+            >Go To Neo-Aysu Project</a
+          >
+        </div>
+      </div>
       <img
         src="images/portfolio/01.jpg"
         width="80%"
