added links to images

--- a/index.html
+++ b/index.html
@@ -173,8 +173,10 @@
         </div>
         <h3 class="mt-4">Current Situation</h3>
         <p class="text-start mt-2">
-          Getting prepared for the IELTS exam <br />
-          Working on my second extracted article from my master's thesis
+          ▪ Getting prepared for the IELTS exam on the sixth of January 2024<br />
+          ▪ Working on my
+          <a href="/publications.html#second-article" class="second-article">second article </a
+          >extracted from my master's thesis
         </p>
         <h3 class="text-center">
           <a href="images/cv.pdf" class="btn btn-customized mt-5"
@@ -197,7 +199,7 @@
                 />
               </div>
               <div class="contact-me mt-3 text-muted">
-                  Ahmad Farkhondeh <br />Industrial Designer
+                Ahmad Farkhondeh <br />Industrial Designer
               </div>
             </div>
           </div>
