--- a/projects.html
+++ b/projects.html
@@ -237,19 +237,28 @@
         and social interaction, which was very effective in getting familiar
         with my research interest in sustainable design.
       </p>
-      <div class="d-flex justify-content-center pb-5">
-        <img
-          src="/images/Other-Projects/02-Environmental Design/01.jpg"
-          alt=""
-          class="img-fluid p-1"
-          width="30%"
-        />
-        <img
-          src="images/Other-Projects/02-Environmental Design/02.jpg"
-          alt=""
-          class="img-fluid p-1"
-          width="30%"
-        />
+      <div class="row mb-5 pb-5">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4">
+          <a href="/images/Other-Projects/02-Environmental Design/01.jpg">
+            <img
+              src="/images/Other-Projects/02-Environmental Design/01.jpg"
+              alt=""
+              class="img-fluid p-1"
+              width="100%"
+            />
+          </a>
+        </div>
+        <div class="col-lg-4">
+          <a href="/images/Other-Projects/02-Environmental Design/02.jpg">
+            <img
+              src="images/Other-Projects/02-Environmental Design/02.jpg"
+              alt=""
+              class="img-fluid p-1"
+              width="100%"
+          /></a>
+        </div>
+        <div class="col-lg-2"></div>
       </div>
 
       <h2 class="mb-3 mt-3">Contact with Industry Project</h2>
@@ -268,19 +277,29 @@
         got familiar with the Human-Computer Interaction (HCI) concept and its
         effects on a healthy lifestyle.
       </p>
-      <div class="d-flex justify-content-center pb-5">
-        <img
-          src="/images/Other-Projects/03-Morfius/01.jpg"
-          alt=""
-          class="img-fluid p-1"
-          width="30%"
-        />
-        <img
-          src="/images/Other-Projects/03-Morfius/02.jpg"
-          alt=""
-          class="img-fluid p-1"
-          width="30%"
-        />
+
+      <div class="row mb-5 pb-5">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-4">
+          <a href="/images/Other-Projects/03-Morfius/01.jpg">
+            <img
+              src="/images/Other-Projects/03-Morfius/01.jpg"
+              alt=""
+              class="img-fluid p-1"
+              width="100%"
+            />
+          </a>
+        </div>
+        <div class="col-lg-4">
+          <a href="/images/Other-Projects/03-Morfius/02.jpg">
+            <img
+              src="/images/Other-Projects/03-Morfius/02.jpg"
+              alt=""
+              class="img-fluid p-1"
+              width="100%"
+          /></a>
+        </div>
+        <div class="col-lg-2"></div>
       </div>
 
       <h2 class="mb-3 mt-3">Packaging</h2>
@@ -421,12 +440,14 @@
         design and learning about Dialux software capabilities was very
         effective in the quality of my other projects.
       </p>
-      <img
-        src="/images/Other-Projects/05-Dialux Project/01.jpg"
-        alt=""
-        class="img-fluid pb-5"
-        width="40%"
-      />
+      <a href="/images/Other-Projects/05-Dialux Project/01.jpg">
+        <img
+          src="/images/Other-Projects/05-Dialux Project/01.jpg"
+          alt=""
+          class="img-fluid pb-5"
+          width="40%"
+        />
+      </a>
     </div>
     <footer id="contact-me">
       <div class="container">
