--- a/publications.html
+++ b/publications.html
@@ -263,7 +263,7 @@
         </div>
       </div>
     </div>
-    <div class="wrapper text-center pt-3 pb-3">
+    <div class="wrapper text-center pt-3 pb-3" id="second-article">
       <div class="ms-5">
         <h2>
           Evaluating the Impact of Citizen's Sense of Attachment and
